Adding Product Service, Order Service and Inventory Service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=product-service
 # ============================================
 
 # Connexion locale (port par défaut 27017)
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+spring.data.mongodb.uri=mongodb://localhost:27017/shopping-product-service
 
 # Nom de la base
 #spring.data.mongodb.database=enterprise_db
