--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
   <name>shoppingApplicationsMS</name>
   <url>http://maven.apache.org</url>
 
+  <modules>
+    <module>product-service</module>
+    <module>order-service</module>
+    <module>inventory-service</module>
+  </modules>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
