Adding Product Service, Order Service and Inventory Service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=product-service
 # ============= MONGODB LOCAL ================
 # ============================================
 
-# Connexion locale (port par défaut 27017)
+# Connexion locale (port par defaut 27017)
 spring.data.mongodb.uri=mongodb://localhost:27017/shopping-product-service
 
 # Nom de la base
@@ -12,9 +12,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/shopping-product-service
 # Activer la création automatique des indexes
 spring.data.mongodb.auto-index-creation=true
 
-# Timeout (optionnel)
-spring.data.mongodb.connection-timeout=5000
-spring.data.mongodb.socket-timeout=10000
-
-# Logging debug pour MongoTemplate
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
