--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -6,14 +6,14 @@
 		<groupId>com.gkfcsolution</groupId>
 		<artifactId>shoppingApplicationsMS</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+<!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
 	</parent>
 
 	<artifactId>order-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+<!--	<version>0.0.1-SNAPSHOT</version>-->
 	<name>order-service</name>
 	<description>order-service</description>
-	<url/>
+<!--	<url/>
 	<licenses>
 		<license/>
 	</licenses>
@@ -25,10 +25,10 @@
 		<developerConnection/>
 		<tag/>
 		<url/>
-	</scm>
-	<properties>
+	</scm>-->
+<!--	<properties>
 		<java.version>17</java.version>
-	</properties>
+	</properties>-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -38,7 +38,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+<!--			<version>3.5.6</version>-->
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -56,13 +60,5 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
