Adding WebFlux to make Restemplate request from order service to inventory-service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# ===============================
+# ? Configuration du serveur
+# ===============================
+server.port=8081
 spring.application.name=product-service
 # ============================================
 # ============= MONGODB LOCAL ================
