--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # ===============================
 # ? Configuration du serveur
 # ===============================
-server.port=8082
+#server.port=8082
+server.port=0
 spring.application.name=inventory-service
 
 # ===============================
@@ -26,3 +27,9 @@ spring.application.name=inventory-service
 # ===============================
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===============================
+# ? Configuration du Client Eureka
+# ===============================
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=true
