--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -13,19 +13,33 @@
 <!--	<version>0.0.1-SNAPSHOT</version>-->
 	<name>order-service</name>
 	<description>order-service</description>
-<!--	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>-->
+	<properties>
+		<spring-cloud.version>2025.0.0</spring-cloud.version>
+	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<!--	<url/>
+        <licenses>
+            <license/>
+        </licenses>
+        <developers>
+            <developer/>
+        </developers>
+        <scm>
+            <connection/>
+            <developerConnection/>
+            <tag/>
+            <url/>
+        </scm>-->
 <!--	<properties>
 		<java.version>17</java.version>
 	</properties>-->
@@ -57,6 +71,10 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>annotationProcessor</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 	</dependencies>
 
