--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.application.name=order-service
 # ===============================
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===============================
+# ? Configuration du Client Eureka
+# ===============================
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
