--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.data.mongodb.uri=mongodb://localhost:27017/shopping-product-service
 spring.data.mongodb.auto-index-creation=true
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+# ===============================
+# ? Configuration du Client Eureka
+# ===============================
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
