Adding ApiGateway service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # ===============================
 # ? Configuration du serveur
 # ===============================
-server.port=8080
+server.port=0
+#server.port=8080
 spring.application.name=product-service
 # ============================================
 # ============= MONGODB LOCAL ================
