--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,10 +7,21 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
 # Gateway routes
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
 
 # Logging (utile pour debug)
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.reactor.netty.http.client=DEBUG
+
+# Product Service Route
+spring.cloud.gateway.server.webmvc.routes[0].id=product-service 
+spring.cloud.gateway.server.webmvc.routes[0].uri=lb://product-service
+spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/api/product
+
+# Order Service Route
+spring.cloud.gateway.server.webmvc.routes[1].id=order-service 
+spring.cloud.gateway.server.webmvc.routes[1].uri=lb://order-service
+spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/api/order
