Adding ApiGateway service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -25,3 +25,9 @@ spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/api/product
 spring.cloud.gateway.server.webmvc.routes[1].id=order-service 
 spring.cloud.gateway.server.webmvc.routes[1].uri=lb://order-service
 spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/api/order
+
+# Discovery Server Route
+spring.cloud.gateway.server.webmvc.routes[2].id=discovery-server-service 
+spring.cloud.gateway.server.webmvc.routes[2].uri=lb://localhost:8761
+spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.server.webmvc.routes[2].filters[0]=SetPath=/
