--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,11 +5,7 @@ server.port=8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-
-## Gateway routes
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-
+#app.eureka-server=localhost
 
 ## Logging (utile pour debug)
 logging.level.root=INFO
@@ -17,23 +13,27 @@ logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.reactor.netty.http.client=DEBUG
 
 ## Product Service Route
-spring.cloud.gateway.server.webmvc.routes[0].id=product-service 
-spring.cloud.gateway.server.webmvc.routes[0].uri=lb://product-service
-spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/api/product
+spring.cloud.gateway.server.webflux.routes[0].id=product-service
+spring.cloud.gateway.server.webflux.routes[0].uri=lb://product-service
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/product/**
 
-## Order Service Route
-spring.cloud.gateway.server.webmvc.routes[1].id=order-service 
-spring.cloud.gateway.server.webmvc.routes[1].uri=lb://order-service
-spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/api/order
+spring.cloud.gateway.server.webflux.routes[1].id=order-service
+spring.cloud.gateway.server.webflux.routes[1].uri=lb://order-service
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/order/**
 
-## Discovery Server Route
-spring.cloud.gateway.server.webmvc.routes[2].id=discovery-server-service 
-spring.cloud.gateway.server.webmvc.routes[2].uri=http://localhost:8761
-#spring.cloud.gateway.server.webmvc.routes[2].uri=lb://localhost:8761
-spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.server.webmvc.routes[2].filters[0]=SetPath=/
+## Discovery Server Route (Eureka UI)
+spring.cloud.gateway.server.webflux.routes[2].id=discovery-server-service
+spring.cloud.gateway.server.webflux.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.server.webflux.routes[2].filters[0]=SetPath=/
 
-## Discovery Server Static Resourses Route
-spring.cloud.gateway.server.webmvc.routes[3].id=discovery-server-service-static 
-spring.cloud.gateway.server.webmvc.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.server.webmvc.routes[3].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.server.webflux.routes[3].id=discovery-server-service-static
+spring.cloud.gateway.server.webflux.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/eureka/**
+
+## Activer la découverte automatique via Eureka
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
+
+## JWT / Keycloak
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
