--- a/discovery-server-service/src/main/resources/application.properties
+++ b/discovery-server-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=true
 server.port=8761
+
+
+eureka.username=${EUREKA_USERNAME:eureka}
+eureka.password=${EUREKA_PASSWORD:password}
