--- a/discovery-server-service/src/main/resources/application.properties
+++ b/discovery-server-service/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=discovery-server-service
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=true
+eureka.client.fetch-registry=false
 server.port=8761
 
 
-eureka.username=${EUREKA_USERNAME:eureka}
-eureka.password=${EUREKA_PASSWORD:password}
+eureka.username=${EUREKA_USERNAME}
+eureka.password=${EUREKA_PASSWORD}
+#eureka.username=${EUREKA_USERNAME:eureka}
+#eureka.password=${EUREKA_PASSWORD:123456}
