--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -20,4 +20,5 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 # ===============================
 # ? Configuration du Client Eureka
 # ===============================
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
