--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -27,22 +27,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<!--	<url/>
-        <licenses>
-            <license/>
-        </licenses>
-        <developers>
-            <developer/>
-        </developers>
-        <scm>
-            <connection/>
-            <developerConnection/>
-            <tag/>
-            <url/>
-        </scm>-->
-<!--	<properties>
-		<java.version>17</java.version>
-	</properties>-->
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -75,6 +60,16 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-resilience4j -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+<!--			<version>3.3.0</version>-->
 		</dependency>
 	</dependencies>
 
