--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 # ? Configuration de la base de données MySQL
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/order_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://localhost:3306/order_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -32,3 +31,37 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ===============================
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
+
+# ===============================
+# ? Configuration de Actuator
+# ===============================
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# ===============================
+# ? Configuration du Circuit Breaker Resiliense4j
+# ===============================
+resilience4j.circuitbreaker.configs.default.register-health-indicator=true
+resilience4j.circuitbreaker.configs.default.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.configs.default.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.sliding-window-size=10
+resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
+resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
+
+#resilience4j.retry.configs.default.max-attempts=3
+#resilience4j.retry.configs.default.wait-duration=2s
+#resilience4j.retry.configs.default.enable-exponential-backoff=true
+#
+#resilience4j.ratelimiter.configs.default.limit-for-period=10
+#resilience4j.ratelimiter.configs.default.limit-refresh-period=1s
+#resilience4j.ratelimiter.configs.default.timeout-duration=2s
+#
+#resilience4j.bulkhead.configs.default.max-concurrent-calls=10
+#resilience4j.bulkhead.configs.default.max-wait-duration=5s
+#
+#resilience4j.timelimiter.configs.default.timeout-duration=3s
+#resilience4j.timelimiter.configs.default.cancel-running-future=true
