--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -72,3 +72,13 @@ resilience4j.timelimiter.configs.default.timeout-duration=3s
 management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=http://localhost:9411
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+
+# ===============================
+# ? Kafka Properties
+# ===============================
+
+# ----------------------------------
+# Kafka bootstrap servers
+# ----------------------------------
+spring.kafka.bootstrap-servers=localhost:9092
