Add Kafka Configuration

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -82,3 +82,22 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 # Kafka bootstrap servers
 # ----------------------------------
 spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+
+# ----------------------------------
+# Producer configuration
+# ----------------------------------
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# IMPORTANT pour éviter les erreurs de type
+#spring.kafka.producer.properties.spring.json.trusted.packages=*
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.gkfcsolution.orderservice.event.OrderPlaceEvent
+
+#spring.kafka.producer.key-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.acks=all
+#spring.kafka.producer.retries=3
+#spring.kafka.producer.batch-size=16384
+#spring.kafka.producer.linger-ms=5
+spring.kafka.producer.buffer-memory=33554432
