--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>order-service</module>
         <module>inventory-service</module>
         <module>discovery-server-service</module>
+        <module>notification-service</module>
     </modules>
 
     <properties>
