Add Kafka Configuration  DONE OK

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -64,7 +64,7 @@ resilience4j.ratelimiter.configs.default.timeout-duration=10s
 #resilience4j.bulkhead.configs.default.max-concurrent-calls=10
 #resilience4j.bulkhead.configs.default.max-wait-duration=5s
 #timelimiter
-resilience4j.timelimiter.configs.default.timeout-duration=3s
+resilience4j.timelimiter.configs.default.timeout-duration=10s
 #resilience4j.timelimiter.configs.default.cancel-running-future=true
 
 
@@ -91,7 +91,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 # IMPORTANT pour éviter les erreurs de type
-#spring.kafka.producer.properties.spring.json.trusted.packages=*
+spring.kafka.producer.properties.spring.json.trusted.packages=*
 spring.kafka.producer.properties.spring.json.type.mapping=event:com.gkfcsolution.orderservice.event.OrderPlaceEvent
 
 #spring.kafka.producer.key-serializer=org.springframework.kafka.support.serializer.JsonSerializer
