--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -35,6 +35,10 @@ spring.cloud.gateway.server.webflux.routes[3].id=discovery-server-service-static
 spring.cloud.gateway.server.webflux.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/eureka/**
 
+spring.cloud.gateway.server.webflux.routes[4].id=notification-service
+spring.cloud.gateway.server.webflux.routes[4].uri=lb://notification-service
+spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/notification/**
+
 ## Activer la découverte automatique via Eureka
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
