--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -38,11 +38,11 @@ spring.kafka.template.default-topic=notificationTopic
 # ----------------------------------
 # Consumer configuration
 # ----------------------------------
-#spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.group-id=notificationId
 #spring.kafka.consumer.auto-offset-reset=earliest
 #spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.enable-auto-commit=false
+#spring.kafka.consumer.enable-auto-commit=false
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
