Add Kafka Configuration  DONE OK

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -101,3 +101,7 @@ spring.kafka.producer.properties.spring.json.type.mapping=event:com.gkfcsolution
 #spring.kafka.producer.batch-size=16384
 #spring.kafka.producer.linger-ms=5
 spring.kafka.producer.buffer-memory=33554432
+
+# PROMETHEUS CONFIG
+# Activer les endpoints de management
+#management.endpoints.web.exposure.include=health,info,prometheus,metrics
