--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -51,3 +51,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realm
 management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=http://localhost:9411
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# PROMETHEUS CONFIG
+# Activer les endpoints de management
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
