--- a/discovery-server-service/src/main/resources/application.properties
+++ b/discovery-server-service/src/main/resources/application.properties
@@ -16,3 +16,7 @@ eureka.password=${EUREKA_PASSWORD}
 management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=http://localhost:9411
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# PROMETHEUS CONFIG
+# Activer les endpoints de management
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
