--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -40,3 +40,7 @@ eureka.instance.prefer-ip-address=true
 management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=http://localhost:9411
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# PROMETHEUS CONFIG
+# Activer les endpoints de management
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
