--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -51,3 +51,7 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 #spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.gkfcsolution.notificationservice.event.OrderPlaceEvent
 
+
+# PROMETHEUS CONFIG
+# Activer les endpoints de management
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
