--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -24,6 +24,10 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
 
+# PROMETHEUS CONFIG
+# Activer les endpoints de management
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+
 # ZIPKIN CONFIG
 #management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=http://localhost:9411
